fix call to action and text alignment

--- a/style.css
+++ b/style.css
@@ -19,13 +19,15 @@ ul {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    padding-right: 120px;
 
 }
 .one {
     background-color: #1f2937;
     display: flex;
-    justify-content: space-between;
-    padding: 40px;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
 .left {
     display: flex;
@@ -42,8 +44,10 @@ button{
     height: 20px;
 }
 .one img {
-    height: 200px;
-    width: 400px;
+    height: 350px;
+    width: 700px;
+    padding-right: auto;
+    margin: 20px;
 }
 
 .second {
@@ -94,14 +98,41 @@ p{
     text-align: end;
 }
 .four {
-    background-color: blue;
+    background-color: #2121dd;
     color: #ffffff;
     margin: 120px;
     border-radius: 5px;
     height: 90px;
     display: flex;
-    flex-direction: ;
+    justify-content: space-between;
+    flex: 0 0 1;
+    width: 1000px;
+    height: 100px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
+.four button{
+    display: flex;
+    align-self: center;
+    margin-right: 12%;
+   
+}
+.call {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 17%;
+}
+
+
+
+
+
+
+
+
 .footer {
     background-color: #1f2937;
     color: #ffffff;
